testing redesign - fixed spacing layering

--- a/test/stylesheet.css
+++ b/test/stylesheet.css
@@ -119,7 +119,6 @@ body, html
 	height:20vh;
 	width: 100%;
 	background: #151416;
-	z-index: 10;
 	position: relative;
 }
 .fullscreen
